parser.output
Terminals unused in grammar

   CLOSE_CLURLY_BRKT


Grammar

    0 $accept: Goal $end

    1 Goal: import_ choose

    2 choose: declist
    3       | block
    4       | stmtlist

    5 import_: import_ '\n' IMPORT filename
    6        | IMPORT filename
    7        | %empty

    8 filename: VARIABLE_NAME
    9         | STRING_VALUE

   10 declist: declist dec
   11        | dec

   12 dec: vardec
   13    | fundec

   14 vardec: vartype vardeclist SEMICOLON

   15 vardeclist: vardeclist COMMA vardeclist
   16           | varinit
   17           | varinit EQ array
   18           | varinit EQ expr

   19 array: OPN_SQ_BRKT CLOSE_SQ_BRKT
   20      | OPN_CURLY_BRKT element CLOSE_CURLY_BRKT
   21      | OPN_CURLY_BRKT OPN_CURLY_BRKT element CLOSE_CURLY_BRKT CLOSE_CURLY_BRKT

   22 element: values
   23        | VARIABLE_NAME
   24        | element COMMA values
   25        | OPN_CURLY_BRKT element CLOSE_CURLY_BRKT COMMA OPN_CURLY_BRKT element CLOSE_CURLY_BRKT
   26        | %empty

   27 values: SIGNED_INT_VALUE
   28       | UNSIGNED_INT_VALUE
   29       | boolval
   30       | CHAR_VALUE
   31       | STRING_VALUE

   32 boolval: TRUE
   33        | FALSE

   34 varinit: VARIABLE_NAME
   35        | VARIABLE_NAME OPN_SQ_BRKT CLOSE_SQ_BRKT
   36        | VARIABLE_NAME OPN_SQ_BRKT CLOSE_SQ_BRKT OPN_SQ_BRKT CLOSE_SQ_BRKT
   37        | VARIABLE_NAME OPN_SQ_BRKT VARIABLE_NAME CLOSE_SQ_BRKT
   38        | VARIABLE_NAME OPN_SQ_BRKT VARIABLE_NAME CLOSE_SQ_BRKT OPN_SQ_BRKT VARIABLE_NAME CLOSE_SQ_BRKT
   39        | VARIABLE_NAME OPN_SQ_BRKT CLOSE_SQ_BRKT OPN_SQ_BRKT VARIABLE_NAME CLOSE_SQ_BRKT
   40        | VARIABLE_NAME OPN_SQ_BRKT UNSIGNED_INT_VALUE CLOSE_SQ_BRKT
   41        | VARIABLE_NAME OPN_SQ_BRKT UNSIGNED_INT_VALUE CLOSE_SQ_BRKT OPN_SQ_BRKT UNSIGNED_INT_VALUE CLOSE_SQ_BRKT
   42        | VARIABLE_NAME OPN_SQ_BRKT CLOSE_SQ_BRKT OPN_SQ_BRKT UNSIGNED_INT_VALUE CLOSE_SQ_BRKT

   43 vartype: UNSIGNED_INT
   44        | UNSIGNED_LONG
   45        | INT
   46        | BOOL
   47        | CHAR
   48        | LONG
   49        | STRING

   50 file_operation: FILEREAD VARIABLE_NAME EQ READ OPN_BRKT filename CLOSE_BRKT SEMICOLON stmtlist CLOSE OPN_BRKT filename CLOSE_BRKT SEMICOLON
   51               | FILEWRITE WRITE OPN_BRKT filename CLOSE_BRKT SEMICOLON stmtlist CLOSE OPN_BRKT filename CLOSE_BRKT SEMICOLON

   52 fundec: vartype VARIABLE_NAME OPN_BRKT params CLOSE_BRKT block
   53       | return_type VARIABLE_NAME OPN_BRKT params CLOSE_BRKT block

   54 return_type: VOID
   55            | vartype OPN_SQ_BRKT CLOSE_SQ_BRKT
   56            | vartype OPN_SQ_BRKT CLOSE_SQ_BRKT OPN_SQ_BRKT CLOSE_SQ_BRKT

   57 params: paramlist

   58 paramlist: arg_type COMMA paramlist
   59          | arg_type
   60          | %empty

   61 arg_type: vartype VARIABLE_NAME
   62         | vartype VARIABLE_NAME OPN_SQ_BRKT CLOSE_SQ_BRKT
   63         | vartype VARIABLE_NAME OPN_SQ_BRKT CLOSE_SQ_BRKT OPN_SQ_BRKT VARIABLE_NAME CLOSE_SQ_BRKT
   64         | vartype VARIABLE_NAME OPN_SQ_BRKT CLOSE_SQ_BRKT OPN_SQ_BRKT UNSIGNED_INT_VALUE CLOSE_SQ_BRKT

   65 block: OPN_CURLY_BRKT blockstmts

   66 blockstmts: CLOSE_CURLY_BRKT
   67           | declist stmtlist CLOSE_CURLY_BRKT
   68           | stmtlist CLOSE_CURLY_BRKT

   69 continuestmt: CONTINUE

   70 stmt: exprstmt
   71     | file_operation
   72     | loopstmt
   73     | selectstmt
   74     | breakstmt
   75     | continuestmt
   76     | returnstmt

   77 returnstmt: RETURN exprstmt

   78 stmtlist: stmtlist stmt
   79         | stmt

   80 exprstmt: expr SEMICOLON
   81         | SEMICOLON

   82 selectstmt: IF OPN_BRKT expr CLOSE_BRKT block ELSE block
   83           | IF OPN_BRKT expr CLOSE_BRKT block else_if
   84           | IF OPN_BRKT expr CLOSE_BRKT block

   85 else_if: ELSEIF OPN_BRKT expr CLOSE_BRKT block else_if ELSE block
   86        | ELSEIF OPN_BRKT expr CLOSE_BRKT block

   87 loopstmt: WHILE OPN_BRKT expr CLOSE_BRKT block
   88         | FOR OPN_BRKT assign_expr SEMICOLON expr SEMICOLON inc_or_dec_expr CLOSE_BRKT block
   89         | FOR OPN_BRKT assign_expr SEMICOLON expr SEMICOLON CLOSE_BRKT block

   90 assign_expr: varinit EQ expr
   91            | vartype varinit EQ expr
   92            | %empty

   93 inc_or_dec_expr: flw_term EQ expr
   94                | flw_term PLUS_EQ expr
   95                | flw_term MINUS_EQ expr
   96                | flw_term MULTIPLY_EQ expr
   97                | flw_term DIVIDE_EQ expr
   98                | flw_term MODULO_EQ expr
   99                | POSTINC
  100                | POSTDEC
  101                | PREINC
  102                | PREDEC

  103 breakstmt: BREAK SEMICOLON

  104 expr: inc_or_dec_expr
  105     | simple_expr
  106     | expr QUESTION_MARK expr COLON expr

  107 simple_expr: simple_expr OR and_expr
  108            | and_expr

  109 and_expr: and_expr AND not_expr
  110         | not_expr

  111 not_expr: NOT not_expr
  112         | rel_expr

  113 rel_expr: sum_expr relop sum_expr
  114         | sum_expr

  115 relop: LTEQ
  116      | LT
  117      | GT
  118      | GTEQ
  119      | DBL_EQ
  120      | NOT_EQ

  121 sum_expr: sum_expr sumop term
  122         | term

  123 sumop: PLUS
  124      | MINUS

  125 term: term mulop flw_term
  126     | flw_term

  127 mulop: MULTIPLY
  128      | DIVIDE
  129      | MODULO

  130 flw_term: values
  131         | VARIABLE_NAME
  132         | VARIABLE_NAME OPN_BRKT CLOSE_BRKT
  133         | VARIABLE_NAME after_ID
  134         | OPN_BRKT expr CLOSE_BRKT

  135 after_ID: OPN_SQ_BRKT expr CLOSE_SQ_BRKT follow
  136         | OPN_BRKT args CLOSE_BRKT

  137 follow: OPN_SQ_BRKT expr CLOSE_SQ_BRKT
  138       | %empty

  139 args: args COMMA expr
  140     | expr


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 5
error (256)
UNSIGNED_INT (258) 43
UNSIGNED_LONG (259) 44
INT (260) 45
BOOL (261) 46
CHAR (262) 47
LONG (263) 48
STRING (264) 49
RETURN (265) 77
BREAK (266) 103
READ (267) 50
WRITE (268) 51
CLOSE (269) 50 51
CONTINUE (270) 69
FOR (271) 88 89
WHILE (272) 87
IF (273) 82 83 84
ELSE (274) 82 85
ELSEIF (275) 85 86
VOID (276) 54
TRUE (277) 32
FALSE (278) 33
UNSIGNED_INT_VALUE (279) 28 40 41 42 64
SIGNED_INT_VALUE (280) 27
CHAR_VALUE (281) 30
STRING_VALUE (282) 9 31
VARIABLE_NAME (283) 8 23 34 35 36 37 38 39 40 41 42 50 52 53 61 62
    63 64 131 132 133
IMPORT (284) 5 6
QUESTION_MARK (285) 106
COLON (286) 106
COMMA (287) 15 24 25 58 139
OPN_BRKT (288) 50 51 52 53 82 83 84 85 86 87 88 89 132 134 136
CLOSE_BRKT (289) 50 51 52 53 82 83 84 85 86 87 88 89 132 134 136
OPN_SQ_BRKT (290) 19 35 36 37 38 39 40 41 42 55 56 62 63 64 135 137
CLOSE_SQ_BRKT (291) 19 35 36 37 38 39 40 41 42 55 56 62 63 64 135 137
OPN_CURLY_BRKT (292) 20 21 25 65
CLOSE_CURLY_BRKT (293) 20 21 25 66 67 68
SEMICOLON (294) 14 50 51 80 81 88 89 103
FILEREAD (295) 50
FILEWRITE (296) 51
LTEQ (297) 115
GTEQ (298) 118
LT (299) 116
GT (300) 117
DBL_EQ (301) 119
PLUS_EQ (302) 94
MINUS_EQ (303) 95
MULTIPLY_EQ (304) 96
DIVIDE_EQ (305) 97
MODULO_EQ (306) 98
PREINC (307) 101
POSTINC (308) 99
PREDEC (309) 102
POSTDEC (310) 100
PLUS (311) 123
MINUS (312) 124
MULTIPLY (313) 127
DIVIDE (314) 128
MODULO (315) 129
NOT_EQ (316) 120
EQ (317) 17 18 50 90 91 93
NOT (318) 111
OR (319) 107
AND (320) 109
CLOSE_CLURLY_BRKT (321)


Nonterminals, with rules where they appear

$accept (68)
    on left: 0
Goal (69)
    on left: 1, on right: 0
choose (70)
    on left: 2 3 4, on right: 1
import_ (71)
    on left: 5 6 7, on right: 1 5
filename (72)
    on left: 8 9, on right: 5 6 50 51
declist (73)
    on left: 10 11, on right: 2 10 67
dec (74)
    on left: 12 13, on right: 10 11
vardec (75)
    on left: 14, on right: 12
vardeclist (76)
    on left: 15 16 17 18, on right: 14 15
array (77)
    on left: 19 20 21, on right: 17
element (78)
    on left: 22 23 24 25 26, on right: 20 21 24 25
values (79)
    on left: 27 28 29 30 31, on right: 22 24 130
boolval (80)
    on left: 32 33, on right: 29
varinit (81)
    on left: 34 35 36 37 38 39 40 41 42, on right: 16 17 18 90 91
vartype (82)
    on left: 43 44 45 46 47 48 49, on right: 14 52 55 56 61 62 63 64
    91
file_operation (83)
    on left: 50 51, on right: 71
fundec (84)
    on left: 52 53, on right: 13
return_type (85)
    on left: 54 55 56, on right: 53
params (86)
    on left: 57, on right: 52 53
paramlist (87)
    on left: 58 59 60, on right: 57 58
arg_type (88)
    on left: 61 62 63 64, on right: 58 59
block (89)
    on left: 65, on right: 3 52 53 82 83 84 85 86 87 88 89
blockstmts (90)
    on left: 66 67 68, on right: 65
continuestmt (91)
    on left: 69, on right: 75
stmt (92)
    on left: 70 71 72 73 74 75 76, on right: 78 79
returnstmt (93)
    on left: 77, on right: 76
stmtlist (94)
    on left: 78 79, on right: 4 50 51 67 68 78
exprstmt (95)
    on left: 80 81, on right: 70 77
selectstmt (96)
    on left: 82 83 84, on right: 73
else_if (97)
    on left: 85 86, on right: 83 85
loopstmt (98)
    on left: 87 88 89, on right: 72
assign_expr (99)
    on left: 90 91 92, on right: 88 89
inc_or_dec_expr (100)
    on left: 93 94 95 96 97 98 99 100 101 102, on right: 88 104
breakstmt (101)
    on left: 103, on right: 74
expr (102)
    on left: 104 105 106, on right: 18 80 82 83 84 85 86 87 88 89 90
    91 93 94 95 96 97 98 106 134 135 137 139 140
simple_expr (103)
    on left: 107 108, on right: 105 107
and_expr (104)
    on left: 109 110, on right: 107 108 109
not_expr (105)
    on left: 111 112, on right: 109 110 111
rel_expr (106)
    on left: 113 114, on right: 112
relop (107)
    on left: 115 116 117 118 119 120, on right: 113
sum_expr (108)
    on left: 121 122, on right: 113 114 121
sumop (109)
    on left: 123 124, on right: 121
term (110)
    on left: 125 126, on right: 121 122 125
mulop (111)
    on left: 127 128 129, on right: 125
flw_term (112)
    on left: 130 131 132 133 134, on right: 93 94 95 96 97 98 125 126
after_ID (113)
    on left: 135 136, on right: 133
follow (114)
    on left: 137 138, on right: 135
args (115)
    on left: 139 140, on right: 136 139


State 0

    0 $accept: . Goal $end

    IMPORT  shift, and go to state 1

    $default  reduce using rule 7 (import_)

    Goal     go to state 2
    import_  go to state 3


State 1

    6 import_: IMPORT . filename

    STRING_VALUE   shift, and go to state 4
    VARIABLE_NAME  shift, and go to state 5

    filename  go to state 6


State 2

    0 $accept: Goal . $end

    $end  shift, and go to state 7


State 3

    1 Goal: import_ . choose
    5 import_: import_ . '\n' IMPORT filename

    UNSIGNED_INT        shift, and go to state 8
    UNSIGNED_LONG       shift, and go to state 9
    INT                 shift, and go to state 10
    BOOL                shift, and go to state 11
    CHAR                shift, and go to state 12
    LONG                shift, and go to state 13
    STRING              shift, and go to state 14
    RETURN              shift, and go to state 15
    BREAK               shift, and go to state 16
    CONTINUE            shift, and go to state 17
    FOR                 shift, and go to state 18
    WHILE               shift, and go to state 19
    IF                  shift, and go to state 20
    VOID                shift, and go to state 21
    TRUE                shift, and go to state 22
    FALSE               shift, and go to state 23
    UNSIGNED_INT_VALUE  shift, and go to state 24
    SIGNED_INT_VALUE    shift, and go to state 25
    CHAR_VALUE          shift, and go to state 26
    STRING_VALUE        shift, and go to state 27
    VARIABLE_NAME       shift, and go to state 28
    OPN_BRKT            shift, and go to state 29
    OPN_CURLY_BRKT      shift, and go to state 30
    SEMICOLON           shift, and go to state 31
    FILEREAD            shift, and go to state 32
    FILEWRITE           shift, and go to state 33
    PREINC              shift, and go to state 34
    POSTINC             shift, and go to state 35
    PREDEC              shift, and go to state 36
    POSTDEC             shift, and go to state 37
    NOT                 shift, and go to state 38
    '\n'                shift, and go to state 39

    choose           go to state 40
    declist          go to state 41
    dec              go to state 42
    vardec           go to state 43
    values           go to state 44
    boolval          go to state 45
    vartype          go to state 46
    file_operation   go to state 47
    fundec           go to state 48
    return_type      go to state 49
    block            go to state 50
    continuestmt     go to state 51
    stmt             go to state 52
    returnstmt       go to state 53
    stmtlist         go to state 54
    exprstmt         go to state 55
    selectstmt       go to state 56
    loopstmt         go to state 57
    inc_or_dec_expr  go to state 58
    breakstmt        go to state 59
    expr             go to state 60
    simple_expr      go to state 61
    and_expr         go to state 62
    not_expr         go to state 63
    rel_expr         go to state 64
    sum_expr         go to state 65
    term             go to state 66
    flw_term         go to state 67


State 4

    9 filename: STRING_VALUE .

    $default  reduce using rule 9 (filename)


State 5

    8 filename: VARIABLE_NAME .

    $default  reduce using rule 8 (filename)


State 6

    6 import_: IMPORT filename .

    $default  reduce using rule 6 (import_)


State 7

    0 $accept: Goal $end .

    $default  accept


State 8

   43 vartype: UNSIGNED_INT .

    $default  reduce using rule 43 (vartype)


State 9

   44 vartype: UNSIGNED_LONG .

    $default  reduce using rule 44 (vartype)


State 10

   45 vartype: INT .

    $default  reduce using rule 45 (vartype)


State 11

   46 vartype: BOOL .

    $default  reduce using rule 46 (vartype)


State 12

   47 vartype: CHAR .

    $default  reduce using rule 47 (vartype)


State 13

   48 vartype: LONG .

    $default  reduce using rule 48 (vartype)


State 14

   49 vartype: STRING .

    $default  reduce using rule 49 (vartype)


State 15

   77 returnstmt: RETURN . exprstmt

    TRUE                shift, and go to state 22
    FALSE               shift, and go to state 23
    UNSIGNED_INT_VALUE  shift, and go to state 24
    SIGNED_INT_VALUE    shift, and go to state 25
    CHAR_VALUE          shift, and go to state 26
    STRING_VALUE        shift, and go to state 27
    VARIABLE_NAME       shift, and go to state 28
    OPN_BRKT            shift, and go to state 29
    SEMICOLON           shift, and go to state 31
    PREINC              shift, and go to state 34
    POSTINC             shift, and go to state 35
    PREDEC              shift, and go to state 36
    POSTDEC             shift, and go to state 37
    NOT                 shift, and go to state 38

    values           go to state 44
    boolval          go to state 45
    exprstmt         go to state 68
    inc_or_dec_expr  go to state 58
    expr             go to state 60
    simple_expr      go to state 61
    and_expr         go to state 62
    not_expr         go to state 63
    rel_expr         go to state 64
    sum_expr         go to state 65
    term             go to state 66
    flw_term         go to state 67


State 16

  103 breakstmt: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 69


State 17

   69 continuestmt: CONTINUE .

    $default  reduce using rule 69 (continuestmt)


State 18
